# ESP32-S3-AIDA64-Monitor

./: .gitignore  CMakeLists.txt  README.md  partitions_webserver.csv
components/ap_wifi/: CMakeLists.txt  ap_wifi.c  ap_wifi.h  wifi_manager.c  wifi_manager.h  ws_server.c  ws_server.h
components/bsp/: CMakeLists.txt  button.c  button.h  ft6336u_driver.c  ft6336u_driver.h  xl9555.c  xl9555.h
html/: apcfg.html
main/: CMakeLists.txt  aida64.c  aida64.h  idf_component.yml  lv_port.c  lv_port.h  main.c  weather.c  weather.h
main/ui/custom/: custom.c  custom.h
